libtech.info served on Python Django - Initial Setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,31 @@
 TAGS
-includes/settings.py
+settings.py
+*.py[cod]
 *.py_*
-*.py.*
-*.pyc
-*.pyc.*
+.Python
+CDN/
+bin/
+include/
+lib/
+img/
+fonts/
+misc/
+.DS_STORE
+*.json
 *~
-\#*\#
+.*swp
+*.jpeg
+*.jpg
+*.png
+*.JPG
+*.PNG
+*.ico
+stripped_requirements.txt
+*.orig
+._*
+mod_wsgi-express*
+#*.*#
 .#*
+\#*\#
+*.patched
+*_patched
