--- a/ionic/libtech/package.json
+++ b/ionic/libtech/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
     "@types/jasmine": "2.5.36",
-    "angularfire2": "2.0.0-beta.6",
-    "firebase": "3.6.10",
+    "angularfire2": "^2.0.0-beta.6",
+    "angularfire2-offline": "^2.0.5",
+    "firebase": "^3.6.10",
     "ionic-angular": "2.1.0",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
