--- a/ionic/fieldApp/ionic.config.json
+++ b/ionic/fieldApp/ionic.config.json
@@ -1,6 +1,5 @@
 {
-  "name": "ionic2-basics",
+  "name": "fieldApp",
   "app_id": "",
-  "v2": true,
-  "typescript": true
+  "type": "ionic-angular"
 }
