--- a/ionic/libtech/package.json
+++ b/ionic/libtech/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.3",
+    "@ionic/cli-plugin-ionic-angular": "1.3.0",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
