--- a/ionic/fieldApp/package.json
+++ b/ionic/fieldApp/package.json
@@ -9,7 +9,8 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "sw": "sw-precache --root=www --config=sw-precache-config.js"
   },
   "dependencies": {
     "@angular/common": "4.1.2",
@@ -36,9 +37,10 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
-    "@ionic/cli-plugin-cordova": "1.3.0",
-    "@ionic/cli-plugin-ionic-angular": "1.3.0",
+    "@ionic/cli-plugin-cordova": "1.4.0",
+    "@ionic/cli-plugin-ionic-angular": "1.3.1",
+    "sw-precache": "^5.1.1",
     "typescript": "2.3.3"
   },
-  "description": "An Ionic project"
+  "description": "Field Reports App"
 }
