Adding the social buttons for login

--- a/ionic/fieldApp/package.json
+++ b/ionic/fieldApp/package.json
@@ -28,6 +28,7 @@
     "@ionic/storage": "2.0.1",
     "angularfire2": "^4.0.0-rc0",
     "angularfire2-offline": "^4.1.4",
+    "bootstrap-social": "^5.1.1",
     "firebase": "^4.0.0",
     "ionic-angular": "3.3.0",
     "ionicons": "3.0.0",
@@ -37,8 +38,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
-    "@ionic/cli-plugin-cordova": "1.5.0",
-    "@ionic/cli-plugin-ionic-angular": "1.4.0",
+    "ionic": "3.10.3",
     "sw-precache": "^5.1.1",
     "typescript": "2.3.3"
   },
