--- a/ionic/fieldApp/ionic.config.json
+++ b/ionic/fieldApp/ionic.config.json
@@ -2,5 +2,8 @@
   "name": "fieldApp",
   "app_id": "c5940bd2",
   "type": "ionic-angular",
-  "watchPatterns": []
+  "watchPatterns": [],
+  "integrations": {
+    "cordova": {}
+  }
 }
