--- a/src/scripts/requirements.txt
+++ b/src/scripts/requirements.txt
@@ -1,10 +1,19 @@
 asgiref==3.2.3
 beautifulsoup4==4.8.1
 bs4==0.0.1
+cachetools==4.1.0
 certifi==2019.11.28
 chardet==3.0.4
 Django==3.0.1
 EasyProcess==0.2.8
+google-api-core==1.17.0
+google-auth==1.14.1
+google-cloud-core==1.3.0
+google-cloud-storage==1.28.0
+google-cloud-vision==1.0.0
+google-resumable-media==0.5.0
+googleapis-common-protos==1.51.0
+grpcio==1.28.1
 idna==2.8
 image==1.5.27
 lxml==4.4.2
@@ -12,14 +21,18 @@ numpy==1.17.4
 opencv-python==4.1.2.30
 pandas==0.25.3
 Pillow==6.2.1
-pkg-resources==0.0.0
+protobuf==3.11.3
 psutil==5.6.7
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyspark==3.0.0.dev0
 pytesseract==0.3.0
 python-dateutil==2.8.1
 python-slugify==4.0.0
 pytz==2019.3
 PyVirtualDisplay==0.2.5
 requests==2.22.0
+rsa==4.0
 selenium==3.141.0
 six==1.13.0
 soupsieve==1.9.5
